Bug 122334 - gtk3: Window's decorator is gone after leaving fullscreen mode
Summary: gtk3: Window's decorator is gone after leaving fullscreen mode
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Full-Screen-Mode GTK3
  Show dependency treegraph
 
Reported: 2018-12-26 13:25 UTC by Xisco Faulí
Modified: 2019-01-18 13:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Before going fullscreen (72.00 KB, image/png)
2018-12-26 13:25 UTC, Xisco Faulí
Details
after leaving fullscreen (68.09 KB, image/png)
2018-12-26 13:27 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-12-26 13:25:57 UTC
Created attachment 147837 [details]
Before going fullscreen

Steps to reproduce:
1. Open Writer
2. Go to Fullscreen mode
3. Leave fullscreen mode

-> Window's decorator is gone. See attached image

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 993913469e74e9db9743004bbe36aa412411671c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2018-12-26 13:27:28 UTC
Created attachment 147838 [details]
after leaving fullscreen
Comment 2 Xisco Faulí 2018-12-26 13:29:39 UTC
Regression introduced by:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/88fc17e473ce2d3e8a7eae4235446a75eb9e91a2%5E%21

commit 88fc17e473ce2d3e8a7eae4235446a75eb9e91a2	[log]
author	Caolán McNamara <caolanm@redhat.com>	Thu Dec 20 10:28:55 2018 +0000
committer	Caolán McNamara <caolanm@redhat.com>	Thu Dec 20 13:09:41 2018 +0100
tree baf01580bf1a1e144d478e799eee29561232af04
parent febe0fd100ff0bff33c965b3bcb497e7f2bc4ef9 [diff]

Resolves: tdf#119688 under X full-screen doesn't work before gtk_widget_show

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 3 Caolán McNamara 2019-01-10 12:30:34 UTC
works for me, which makes this tricky to figure out I guess
Comment 4 Commit Notification 2019-01-17 13:03:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2f7e02e71939e79f07fd6cc9cbb697729e077bc0%5E%21

Resolves: tdf#122334 decorator missing

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2019-01-17 13:23:21 UTC
seeing as its reverted, this presumably is now fixed
Comment 6 Xisco Faulí 2019-01-18 13:19:20 UTC
(In reply to Caolán McNamara from comment #5)
> seeing as its reverted, this presumably is now fixed

Yep, the bug is gone in

Version: 6.3.0.0.alpha0+
Build ID: cc7712ba4c70c035cbf080c5cf2f2eb6f9fe3eb1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded