Resolves: tdf#122334 decorator missing

Revert "Resolves: tdf#119688 under X full-screen doesn't work before gtk_widget_show"

This reverts commit 88fc17e473ce2d3e8a7eae4235446a75eb9e91a2.

Change-Id: I5f2996c0d940eec459725cc91c5dee7fd7dee267
Reviewed-on: https://gerrit.libreoffice.org/66502
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>